tests/error/array_errors/array_index_linear_take_duplicate_index.err
Error: Linearity violation (at $FILE:9:10)
  | 
7 |   qs = array(qubit() for _ in range(10))
8 |   qs.take(0)
9 |   qs.take(0)
  |           ^ Linear value at index 0 used multiple times

Note:
  | 
7 |   qs = array(qubit() for _ in range(10))
8 |   qs.take(0)
  |           -

Note: First use was here

Guppy compilation failed due to 1 previous error
